--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,7 @@
     {% endblock %}
 
     {% block corejs %}
-    <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    <script src="https://kit.fontawesome.com/75b57bf907.js" crossorigin="anonymous"></script>    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
@@ -44,7 +43,16 @@
 </head>
 
 <body>
-    <h1>Hard crack</h1>
+    <div class="text-center pt-5">
+        <h1 class="pink text-uppercase display-1">Hard-Crack</h1>
+        <h3 class="white text-uppercase pb-5 display-4">Addictive Desserts</h3>
+        <h4 class="white pt-5">Currently Under Construction</h4>
+        <h4 class="white">Please visit us here</h4>
+        
+        <a href="https://www.instagram.com/hard.crackbakes?igsh=b3AyMzh4bGZicDQ2" target="_blank" ><i class="white display-4 fa-brands fa-instagram"></i></a>
+
+    </div>
+    
 
     {% if messages %}
     <div class="message-container">
