Add basic Navbar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,6 +6,12 @@
 {% endblock %}
 
 {% block content %}
-
+<header>
+    
+</header>
+<h1 class="text-uppercase text-center pink display-1">Get Your Fix</h1>
+<div class="align-center">
+    <button><a href="">Order</a></button>
+</div>
 
 {% endblock %}
