--- a/templates/base.html
+++ b/templates/base.html
@@ -43,16 +43,52 @@
 </head>
 
 <body>
-    <div class="text-center pt-5">
+    <!-- <div class="text-center pt-5">
         <h1 class="pink text-uppercase display-1">Hard-Crack</h1>
         <h3 class="white text-uppercase pb-5 display-4">Addictive Desserts</h3>
         <h4 class="white pt-5">Currently Under Construction</h4>
         <h4 class="white">Please visit us here</h4>
-        
-        <a href="https://www.instagram.com/hard.crackbakes?igsh=b3AyMzh4bGZicDQ2" target="_blank" ><i class="white display-4 fa-brands fa-instagram"></i></a>
 
+        <a href="https://www.instagram.com/hard.crackbakes?igsh=b3AyMzh4bGZicDQ2" target="_blank" ><i class="white display-4 fa-brands fa-instagram"></i></a>
+    </div> -->
+    <div>
+        <nav class="navbar navbar-expand-lg white">
+            <div class="container-fluid">
+              <a class="navbar-brand white" href="#">Hard-Crack</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item white">
+                    <a class="nav-link white" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link white" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link white" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
     </div>
-    
 
     {% if messages %}
     <div class="message-container">
